hamburger scrollbar issue fix

--- a/html/styles.css
+++ b/html/styles.css
@@ -67,7 +67,7 @@ h2, h3, a, input{
 }
 
 #nav-wrapper{
-    position: absolute;
+    position: fixed;
     right: 0;
     top: 0;
     width: 0;
